[r=andreserl][bug=1606948][author=ricgard] Backport: Allows scroll bars to be hidden/visible in accordion content areas

--- a/src/maasserver/static/scss/maas/components/_accordion.scss
+++ b/src/maasserver/static/scss/maas/components/_accordion.scss
@@ -52,7 +52,7 @@
                 + .accordion__tab-content {
                     max-height: 400px;
                     transition: max-height .5s ease-in;
-                    overflow-y: scroll;
+                    overflow-y: auto;
                 }
             }
         }
